{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 31,
  "lineage": "0c0ce51b-8fef-f4e1-3b35-e3271c35502f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046d547292db65ff6",
            "arn": "arn:aws:ec2:us-west-2:329599621720:elastic-ip/eipalloc-046d547292db65ff6",
            "associate_with_private_ip": "10.0.2.50",
            "association_id": "eipassoc-035fad83199ce6767",
            "domain": "vpc",
            "id": "eipalloc-046d547292db65ff6",
            "instance": "i-036a9c0b13a25adfb",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0eb337542c8cf7b87",
            "private_dns": "ip-10-0-2-50.us-west-2.compute.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-35-81-25-128.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.25.128",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.WebServerNIC",
            "aws_security_group.allow_Web",
            "aws_subnet.myfirstsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d38da78ce859165",
            "arn": "arn:aws:ec2:us-west-2:329599621720:instance/i-036a9c0b13a25adfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036a9c0b13a25adfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0eb337542c8cf7b87"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb337542c8cf7b87",
            "private_dns": "ip-10-0-2-50.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.50",
            "public_ip": "35.81.25.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bfcbee5ff4e4bf87",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1edf7c01f694acf",
            "tags": {
              "Name": "Instance-Ubuntu"
            },
            "tags_all": {
              "Name": "Instance-Ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2c26d67b6250b52"
            ]
          },
          "dependencies": [
            "aws_network_interface.WebServerNIC",
            "aws_security_group.allow_Web",
            "aws_subnet.myfirstsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:internet-gateway/igw-0697d6f347d8d6695",
            "id": "igw-0697d6f347d8d6695",
            "owner_id": "329599621720",
            "tags": {
              "Name": "Learning PROD IG"
            },
            "tags_all": {
              "Name": "Learning PROD IG"
            },
            "vpc_id": "vpc-097f9c78d5fc36a01"
          },
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "WebServerNIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:network-interface/eni-0eb337542c8cf7b87",
            "attachment": [
              {
                "attachment_id": "eni-attach-08c6fb6ef61aa970f",
                "device_index": 0,
                "instance": "i-036a9c0b13a25adfb"
              }
            ],
            "id": "eni-0eb337542c8cf7b87",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:d1:89:e0:99:f7",
            "owner_id": "329599621720",
            "private_ip": "10.0.2.50",
            "private_ip_list": [
              "10.0.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f2c26d67b6250b52"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1edf7c01f694acf"
          },
          "dependencies": [
            "aws_security_group.allow_Web",
            "aws_subnet.myfirstsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Routetable-Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:route-table/rtb-02f5550724a2a9a58",
            "id": "rtb-02f5550724a2a9a58",
            "owner_id": "329599621720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0697d6f347d8d6695",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0697d6f347d8d6695",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routetable-Main"
            },
            "tags_all": {
              "Name": "Routetable-Main"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f9c78d5fc36a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09137d723171d313e",
            "route_table_id": "rtb-02f5550724a2a9a58",
            "subnet_id": "subnet-0e1edf7c01f694acf"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Routetable-Main",
            "aws_subnet.myfirstsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_Web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:security-group/sg-0f2c26d67b6250b52",
            "description": "Allow Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2c26d67b6250b52",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_WebTraffic",
            "name_prefix": "",
            "owner_id": "329599621720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Web_SG"
            },
            "tags_all": {
              "Name": "allow_Web_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f9c78d5fc36a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myfirstsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:subnet/subnet-0e1edf7c01f694acf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1edf7c01f694acf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329599621720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning PROD Subnet"
            },
            "tags_all": {
              "Name": "Learning PROD Subnet"
            },
            "vpc_id": "vpc-097f9c78d5fc36a01"
          },
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myfirstvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:vpc/vpc-097f9c78d5fc36a01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7c50419095a507f",
            "default_route_table_id": "rtb-0cf95322d19bc58d7",
            "default_security_group_id": "sg-0f69fb79e650f708a",
            "dhcp_options_id": "dopt-078b785b37dd05305",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097f9c78d5fc36a01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf95322d19bc58d7",
            "owner_id": "329599621720",
            "tags": {
              "Name": "Learning PROD Main VPC",
              "Owner": "myfirstvpc"
            },
            "tags_all": {
              "Name": "Learning PROD Main VPC",
              "Owner": "myfirstvpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:security-group-rule/sgr-063d1adc3657947ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-063d1adc3657947ae",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f2c26d67b6250b52",
            "security_group_rule_id": "sgr-063d1adc3657947ae",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_Web",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:security-group-rule/sgr-069e887799444b7ef",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-069e887799444b7ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f2c26d67b6250b52",
            "security_group_rule_id": "sgr-069e887799444b7ef",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_Web",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:security-group-rule/sgr-067d6229a6b5d2272",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-067d6229a6b5d2272",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f2c26d67b6250b52",
            "security_group_rule_id": "sgr-067d6229a6b5d2272",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_Web",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:329599621720:security-group-rule/sgr-0fd07a30674fddb48",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fd07a30674fddb48",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f2c26d67b6250b52",
            "security_group_rule_id": "sgr-0fd07a30674fddb48",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_Web",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    }
  ]
}